# Assignment_3

./: CMakeLists.txt  ENT_Test_12_1_2026.csv  ENT_Test_old.csv  MASTER_GUIDE.md  Makefile  README.md  TodoList.md  analysis.py  experiment_final.py  main_experiment.py  main_experiment_enhanced.py  requirements.txt  testing_process.csv  testing_process_10000_ite.csv  testing_process_Standalone_Kyber512.csv  testing_process_Standalone_X25519.csv  testing_process_ent.csv  testing_process_ent_Hybrid_HQC_128_Ascon128a.csv  testing_process_ent_Standalone_BIKE_L1.csv  testing_process_ent_save.csv  testing_process_save.csv
analysis_output/: analysis.py  statistical_report.txt
docs/: EXPERIMENTAL_PIPELINE_SUMMARY.md
gem5_tests/: gem5_hardware_summary.txt  raw_stats_m1.txt  raw_stats_m10.txt  raw_stats_m2.txt  raw_stats_m3.txt  raw_stats_m4.txt  raw_stats_m5.txt  raw_stats_m6.txt  raw_stats_m7.txt  raw_stats_m8.txt  raw_stats_m9.txt  testing_process_Standalone_Ascon_80pq.csv  testing_process_Standalone_FrodoKEM_640_AES.csv  testing_process_Standalone_Kyber512.csv  testing_process_Standalone_X25519.csv  testing_process_ent_Hybrid_ClassicMcEliece_348864_Ascon128a.csv  testing_process_ent_Hybrid_FrodoKEM_640_AES_Ascon128a.csv  testing_process_ent_Hybrid_HQC_128_Ascon128a.csv  testing_process_ent_Standalone_Ascon_80pq.csv  testing_process_ent_Standalone_BIKE_L1.csv  testing_process_ent_Standalone_ClassicMcEliece_348864.csv  testing_process_ent_Standalone_FrodoKEM_640_AES.csv  testing_process_ent_Standalone_HQC_128.csv  testing_process_ent_Standalone_Kyber512.csv  (+1 more)
include/: bench.h  (+4 more)
(+212 files in other folders)
